<resources>
    <string name="app_name">Tiebreak</string>
    <string name="hello">Heart Monitoring System!</string>
    <string name="labelHeartRate">000</string>
    <string name="sConnect">Connect</string>
    <string name="sDisconnect">Disconnect</string>
    <string name="sPID">PID</string>
    <string name="sLatitude">Latitude</string>
    <string name="sLongitude">Longitude</string>
    <string name="sHeartRate">Heart Rate</string>
    <string name="sInstantSpeed">Instant Speed</string>
    <string name="sStatus">Status</string>
    <string name="sStatusMessage">Status Message Box</string>
    <string name="action_settings">Settings</string>
</resources>
